RESOLVED FIXED241631
Moving a media element from one document to another should not break autoplay
https://bugs.webkit.org/show_bug.cgi?id=241631
Summary Moving a media element from one document to another should not break autoplay
youenn fablet
Reported 2022-06-15 07:45:11 PDT
Moving a media element from one document to another should not break autoplay
Attachments
youenn fablet
Comment 1 2022-06-15 07:45:26 PDT
youenn fablet
Comment 2 2022-06-15 07:51:59 PDT
EWS
Comment 3 2022-06-16 04:54:05 PDT
Committed r295590 (251595@main): <https://commits.webkit.org/251595@main> Reviewed commits have been landed. Closing PR #1535 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.