Moving a media element from one document to another should not break autoplay https://bugs.webkit.org/show_bug.cgi?id=241631 rdar://95060381

Patch by Youenn Fablet <youennf@gmail.com> on 2022-06-16
Reviewed by Eric Carlson.

When pausing a video element when being detached from a document, autoplay might get broken if the element is interrupted due to invisibility.
In that case, the session will store the fact that the element is paused and when the end of invisibility interruption happens, the session state is Paused instead of Autoplay.
To prevent this, we do not pause when being detached if we are alread interrupted due to invisibility.

Covered by added test.

* LayoutTests/http/tests/webrtc/resources/utility-frame.html: Added.
* LayoutTests/http/tests/webrtc/video-mediastream-invisible-autoplay-detached-expected.txt: Added.
* LayoutTests/http/tests/webrtc/video-mediastream-invisible-autoplay-detached.html: Added.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::pauseAfterDetachedTask):

Canonical link: https://commits.webkit.org/251595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295590 268f45cc-cd09-0410-ab3c-d52691b4dbfc